@@ -3,6 +3,7 @@ apply from: '../publisher.gradle'
 apply from: '../tests.gradle'
 
 android {
+    namespace "org.prebid.mobile.core"
     def getGitHash = { ->
         def stdout = new ByteArrayOutputStream()
         exec {
@@ -16,8 +17,16 @@ android {
         buildConfigField "String", "GitHash", "\"${getGitHash()}\""
         buildConfigField "String", "VERSION", "\"${versionName}\""
         buildConfigField "String", "OMSDK_VERSION", "\"${omSdkVersion}\""
+        multiDexEnabled true
+    }
+    testOptions {
+        unitTests.all {
+            jvmArgs '--add-opens=java.base/java.lang=ALL-UNNAMED'
+            systemProperty 'robolectric.invokedynamic.enable', 'false'
+        }
     }
 }
+
 
 dependencies {
     implementation project(":omsdk-android")
